Revision history for Dancer-Session-Cookie

{{$NEXT}}

0.18      2013-02-16 00:16:32 America/New_York

    - Hack around Dancer bug that renders the request object headers
      repeatedly and locks out setting cookies after the first time

0.17      2013-02-07 15:36:58 America/New_York

    - Fix localhost address used in tests

0.16      2013-02-01 14:39:14 America/New_York

    - Now uses Session::Storage::Secure for encrypting and decrypting data;
      Legacy decryption is preserved in case old cookies need to be read.

    - Fix session destruction bug to ensure session is overwritten in
      the browser, not just no longer sent (David Golden)

0.15    2011-05-21

    * skip test 02-configfile.t if YAML is not present
      FIX smoker test failure.
      (Alexis Sukrieh)

0.14    2011-03-12
    
        [ Michael G. Schwern ]

    * Fix for Dancer > v1.3012 
    * Add support for session_secure to serve https only cookies. 
    * Add missing MYMETA.yml 
    * Make Dancer::Session::Cookie honor the session_name setting 
      added to Dancer::Session::Abstract
    * Add session_cookie_path to control the path of the cookie.

0.13    Sun Nov 28 17:19:58 MSK 2010
                Some documentation fixes. No functional change.

0.12    Thu Sep 16 13:29:09 MSD 2010
        Fix a warning when testing against newer Dancer. No functional
        change.

0.11    Wed Feb 17 16:12:21 MSK 2010
        Chase the ever-changing Dancer core :) No functional change.
        More tests.

0.1     Tue Feb  2 17:20:11 MSK 2010
        First version separated from the Dancer core. No functional
        change.