@@ -45,11 +45,13 @@
             "Crypt::CBC" : "0",
             "Crypt::Rijndael" : "0",
             "Dancer" : "0",
+            "Dancer::Cookie" : "0",
             "Dancer::Session::Abstract" : "0",
             "MIME::Base64" : "0",
             "Session::Storage::Secure" : "0",
             "Storable" : "0",
             "String::CRC32" : "0",
+            "Time::Duration::Parse" : "0",
             "base" : "0",
             "perl" : "5.006",
             "strict" : "0",
@@ -66,11 +68,12 @@
             "File::Temp" : "0",
             "FindBin" : "0",
             "HTTP::Cookies" : "0",
+            "HTTP::Date" : "0",
             "LWP" : "0",
             "LWP::UserAgent" : "0",
             "List::Util" : "0",
             "Test::Exception" : "0",
-            "Test::More" : "0",
+            "Test::More" : "0.96",
             "Test::NoWarnings" : "0",
             "Test::TCP" : "0"
          }
@@ -79,7 +82,7 @@
    "provides" : {
       "Dancer::Session::Cookie" : {
          "file" : "lib/Dancer/Session/Cookie.pm",
-         "version" : "0.18"
+         "version" : "0.19"
       }
    },
    "release_status" : "stable",
@@ -94,6 +97,6 @@
          "web" : "https://github.com/dagolden/dancer-session-cookie"
       }
    },
-   "version" : "0.18"
+   "version" : "0.19"
 }
 
