@@ -2,6 +2,8 @@ Revision history for Dancer-Session-Cookie
 
 {{$NEXT}}
 
+    - Fix bug with session_expires always expiring a cookie early
+
 0.18      2013-02-16 00:16:32 America/New_York
 
     - Hack around Dancer bug that renders the request object headers
